my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/WASTRUNC/T_WASTRUNC-struct.h
/* Generated by dmlc, do not edit! */

#ifndef T_WASTRUNC_STRUCT_H
#define T_WASTRUNC_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_WASTRUNC(void);


#endif /* not T_WASTRUNC_STRUCT_H */
